{{$NEXT}}

    * Change Delta.pm to use a grep instead of a map (minor change)

1.302021  2015-10-31 08:15:22-07:00 America/Los_Angeles

    * Remove all number vs string guessing
    * Doc fixes (thanks Magnolia.K)
    * Add details to test report

1.302020  2015-10-29 08:02:25-07:00 America/Los_Angeles

    - No changes, just removing trial

1.302019  2015-10-28 22:32:06-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Declare Test::Stream experimental phase complete
    - Updated Readme
    - Add tooling manual page
    - Better Trace::Mask behavior
    - Added Components manual page
    - Remove or modify experimental notice
    - Remove stray debugging statements
    - Slight change in module list in t/00-report.t

1.302018  2015-10-26 16:47:45-07:00 America/Los_Angeles

    - Better stack traces in spec
    - Remove duplicate module from the report
    - Rename subs in try {} and protect {}
    - Fix loop in SkipWithout
    - Fix Typo in Context pod

1.302017  2015-10-15 21:32:50-07:00 America/Los_Angeles

    - Change minimum module versions (they were wrong)
    - Typo fixes in Test::Stream docs
    - Remove unused variable
    - Fix Compare line number bug

1.302016  2015-10-12 18:49:35-07:00 America/Los_Angeles

    - Workflows/Spec: Argument tolerence, custom line numbers
    - Remove Block.pm
    - Add sub_info and sub_name to Util.pm
    - Workflows: Set sub name if possible (better debugging)
    - Add "Test" that prints deps and versions
    - Add 'class', 'skip_without', and 'srand' to Test::Stream as options
    - Even Core deps now listed in dist.ini
    - Add some missing docs and tests to Util.pm

1.302015  2015-10-04 13:46:56-07:00 America/Los_Angeles

    - Remove spec isolation logic, this can be an external plugin

1.302014  2015-10-03 20:30:14-07:00 America/Los_Angeles

    - Another Delta.t fix

1.302013  2015-10-02 21:51:45-07:00 America/Los_Angeles

    - Fix Util.t for some Term::ReadKey versions
